src/test/ui/parser/pat-lt-bracket-6.stderr
error: missing separator `,`
  --> $DIR/pat-lt-bracket-6.rs:5:20
   |
LL |     let Test(&desc[..]) = x;
   |             -      ^ help: missing `,`
   |             |
   |             while parsing the list starting here

error: expected one of `:`, `;`, `=`, or `|`, found `)`
  --> $DIR/pat-lt-bracket-6.rs:5:23
   |
LL |     let Test(&desc[..]) = x;
   |                       ^ expected one of `:`, `;`, `=`, or `|`

error[E0308]: mismatched types
  --> $DIR/pat-lt-bracket-6.rs:9:30
   |
LL | const RECOVERY_WITNESS: () = 0;
   |                              ^ expected `()`, found integer

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
